2002-05-10  Bastien Nocera  <hadess@hadess.net>

	* io-gtk.c: (callback_restart), (callback_new_with_seed),
	(callback_new), (callback_exit), (inform_invalid_move):
	destroy the "invalid move" dialog (Closes: #80270), make "Quit"
	the default answer

2002-04-26  Bastien Nocera  <hadess@hadess.net>

	* freecell.schemas: add <applyto> field, doh !

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* card-draw.c: (draw_card), (draw_background), (card_draw_init),
	(card_draw_card_general), (card_draw_deck_general):
	* freecell.c: (main):
	* io-gtk.c: (callback_restart), (callback_restart_lose),
	(callback_seed_input), (callback_new_with_seed_really),
	(callback_new_with_seed_with_lose), (callback_new_with_seed),
	(callback_new_really_callback), (callback_new_with_lose),
	(callback_new), (callback_option), (callback_rule),
	(callback_exit_really), (callback_exit_with_lose), (callback_exit),
	(callback_about), (inform_invalid_move), (to_destination_auto):
	* menu.c:
	* option-dialog.c: (option_dialog):
	* score-dialog.c: (score_dialog_callback), (score_dialog):
	ported the whole thing to gnome2, fixed some bugs, voila !

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* freecell.c: (key_changed_callback), (main):
	* freecell.schemas:
	* io-gtk.c: (io_gtk_init), (callback_restart),
	(callback_new_with_seed_really), (callback_new_with_seed),
	(callback_new), (callback_option), (callback_rule),
	(callback_exit), (inform_invalid_move), (to_destination_auto):
	* option-dialog.c: (option_dialog), (check1_changed_callback),
	(check2_changed_callback), (option_dialog_close_callback):
	* option-dialog.h:
	* option.c: (option_init), (option_write),
	(freecell_gconf_get_int), (freecell_gconf_get_bool):
	* option.h:
	* score.c: (score_init), (score_write): patch by mark@sporkstorms.org
	(Mark Stratman) for gconf support, needs more love though :(

2002-01-06  Juan Pablo Mendoza <jpablo@gnome.org>

	Patch from Andreas Simon.
	