@@ -1,5 +1,12 @@
 2002-05-10  Bastien Nocera  <hadess@hadess.net>
 
+	* io-gtk.c: (callback_new_with_seed_really): make the "new game with
+	seed" more usable, 
+	* score-dialog.c: (score_dialog): more HIG compliance (patch by
+	Fredrik Henrysson) (Closes: #79880)
+
+2002-05-10  Bastien Nocera  <hadess@hadess.net>
+
 	* io-gtk.c: (callback_restart), (callback_new_with_seed),
 	(callback_new), (callback_exit), (inform_invalid_move):
 	destroy the "invalid move" dialog (Closes: #80270), make "Quit"
